--- a/css/index.css
+++ b/css/index.css
@@ -158,7 +158,7 @@ input::placeholder {
 }
 
 .fold {
-    padding-left: 5px;
+    /*padding-left: 5px;*/
 }
 
 .rotate {
@@ -171,8 +171,10 @@ input::placeholder {
         /*justify-content: first baseline;*/
         cursor: default;
         padding: 5px 0;
+        padding-left: 10px;
         font-size: 14px;
         /* background-color: red; */
+        border-radius: 20px;
     }
     .text {
         padding-left: 6px;
@@ -185,25 +187,37 @@ input::placeholder {
     /*background-color: red;*/
     display: flex;
     flex-wrap: wrap;
+    gap: 5px;
     user-select: none;
+    align-content: flex-start;
+    /*align-items: flex-start;*/
     .item {
         /*background-color: blue;*/
+        /*align-items: center;*/
+        justify-content: flex-start;
         user-select: none;
         touch-action: none;
         cursor: move;
-        flex: 1;
-        transform: translate(0, 0);
+        flex-shrink: 0;
         text-align: center;
-        max-width: 80px;
-        width: fit-content;
+        height: 100px;
+        width: calc((100% - 80px) / 5);
+        max-width: calc((100% - 80px) / 5);
+        min-width: calc((100% - 80px) / 5);
+        /*max-height: 80px;*/
         margin: 5px;
-        max-height: 80px;
-        padding-bottom: 5px;
+
+        border: blue;
     }
+    .item:nth-child(4) {
+        margin-right: 0;
+    }
+
     .item img {
         width: 70px;
         margin: 15px 0 0 0;
         user-select: none;
+        touch-action: none;
     }
     .text {
         font-size: 12px;
@@ -214,7 +228,8 @@ input::placeholder {
         /*width: 50px;*/
         cursor: default;
         text-align: center;
-        margin: 0 20px;
+        /*margin: 0 50px;*/
+        padding-bottom: 10px;
     }
 }
 
@@ -228,7 +243,7 @@ input::placeholder {
 
 
 
-nav {
+main nav {
     /*background-color: black;*/
     display: flex;
     width: 99%;
@@ -236,6 +251,18 @@ nav {
     border-bottom: 0.03rem solid white;
     /*background-color: rgba(255, 255, 255, 0.2);*/
 }
+
+.breadcrumb li{
+    list-style: none;
+}
+.breadcrumb {
+    display: flex;
+}
+.breadcrumb a {
+    color: grey;
+}
+
+
 
 #tag_bar {
     /*flex: 3;*/
@@ -321,6 +348,10 @@ nav {
     background-color: rgba(255, 255, 255, 0.2);
 }
 
+.press {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
 main {
     flex: 13;
     display: flex;
@@ -334,8 +365,13 @@ main {
 
 
 #file_pane {
-    flex: 6;
+    flex: 10;
     overflow: scroll;
-    height: 45vh;
-    overflow: scroll;
+    display: flex;
+    justify-content: flex-start;
+    /*height: 45vh;*/
+}
+
+#file_pane item {
+
 }
