--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -3,12 +3,11 @@
 html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
-    background: rgba(0, 0, 0, 0);
 }
 
 body {
-    /* background-image: linear-gradient(to top, rgba(255, 241, 235, 0.2) 0%, rgba(172, 224, 249, 0.5) 100%); */
-    background: rgba(0, 0, 0, 0);
+    background-image: linear-gradient(to top, rgba(255, 241, 235, 0.5) 0%, rgba(172, 224, 249, 0.5) 100%);
+    /* background: rgba(0, 0, 0, 0); */
     -webkit-user-select: none;
     user-select: none;
     display: flex;
@@ -21,6 +20,8 @@ body {
 #sidebar {
      /*background-color: red;*/
     -ms-overflow-style: none;
+    /* overflow-x: hidden; */
+    min-width: 263px;
     flex: 1;
 }
 
@@ -73,13 +74,21 @@ body {
     background-position: left;
 }
 
+#search input:focus {
+    
+}
+
 input::placeholder {
     color: #505b6a;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
 
 #disk {
-    overflow: scroll;
+    overflow-y: scroll;
+   
     padding: 9.152px;
     text-align: left;
     border-radius: 10px;
@@ -193,7 +202,8 @@ input::placeholder {
     flex-wrap: wrap;
     gap: 5px;
     user-select: none;
-    /* overflow-y: hidden; */
+    overflow-y: scroll;
+    overflow-x: hidden;
     align-content: flex-start;
     /*align-items: flex-start;*/
     .item {
@@ -371,7 +381,7 @@ main {
 
 #file_pane {
     flex: 10;
-    overflow: scroll;
+    /* overflow: scroll; */
     display: flex;
     justify-content: flex-start;
     /*height: 45vh;*/
