--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -3,6 +3,7 @@
 html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
+    
 }
 
 body {
@@ -50,8 +51,8 @@ body {
 }
 
 #control>div:hover {
-    background-image: linear-gradient(to top, rgba(255, 241, 235, 0.5) 0%, rgba(172, 224, 249, 0.5) 100%);
-    /* background-color: transparent; */
+    /* background-image: linear-gradient(to top, rgba(255, 241, 235, 0.5) 0%, rgba(172, 224, 249, 0.5) 100%); */
+    background-color: rgba(139, 139, 139, 0.3);
 }
 
 #search {
@@ -342,7 +343,7 @@ main nav {
     /*background-color: black;*/
     padding-left: 20px;
     margin-top: 20px;
-    margin-bottom: 34px;
+    /*margin-bottom: 34px;*/
     justify-content: space-between;
 }
 
@@ -384,7 +385,7 @@ main {
     /* overflow: scroll; */
     display: flex;
     justify-content: flex-start;
-    /*height: 45vh;*/
+    height: 40vh;
 }
 
 #file_pane item {
