--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -7,8 +7,8 @@ html {
 }
 
 body {
-    background-image: linear-gradient(to top, rgba(255, 241, 235, 0.5) 0%, rgba(172, 224, 249, 0.5) 100%);
-    /* background: rgba(0, 0, 0, 0); */
+    /*background-image: linear-gradient(to top, rgba(255, 241, 235, 0.5) 0%, rgba(172, 224, 249, 0.5) 100%);*/
+     background: rgba(0, 0, 0, 0);
     -webkit-user-select: none;
     user-select: none;
     display: flex;
@@ -225,8 +225,8 @@ input::placeholder {
         flex-shrink: 0;
         /*width: calc((100% - 80px) / 5);*/
         /*max-width: calc((100% - 80px) / 5);*/
-        min-width: calc((100% - 80px) / 5);
-        width: 136px;
+        min-width: calc((100% - 50px) / 6);
+        width: 106px;
         /*max-height: 0px;*/
         /*margin: 5px;*/
 
@@ -252,11 +252,11 @@ input::placeholder {
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
-        max-width: 120px;
+        max-width: 80px;
         cursor: default;
         text-align: center;
         min-height: 30px;
-        margin: 0 50px;
+        margin: 0 70px;
         /*padding-bottom: 10px;*/
     }
 
@@ -449,5 +449,9 @@ main {
 }
 #contextMenu4 {
     visibility: hidden;
+}
+
+.input {
+
 }
 
