--- a/ui/Zela/css/index.css
+++ b/ui/Zela/css/index.css
@@ -7,8 +7,8 @@ html {
 }
 
 body {
-    /*background-image: linear-gradient(to top, rgba(255, 241, 235, 0.5) 0%, rgba(172, 224, 249, 0.5) 100%);*/
-     background: rgba(0, 0, 0, 0);
+    background-image: linear-gradient(to top, rgba(255, 241, 235, 0.5) 0%, rgba(172, 224, 249, 0.5) 100%);
+     /* background: rgba(0, 0, 0, 0); */
     -webkit-user-select: none;
     user-select: none;
     display: flex;
@@ -377,7 +377,7 @@ main nav {
 #name {
     color: #d9d9d9;
     text-align: right;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .pane1 {
